--- a/css3/estilos.css
+++ b/css3/estilos.css
@@ -1,6 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
 
+*
+{
+	margin:0;
+}
+
 body
 {
 	font-family: "dancing script";
@@ -12,9 +17,7 @@ header
 	height: 20vh;
 	background-color: #5b7989;
 	border-radius: 10px ;
-	position: fixed;
-    top: 0px;
-	left: 0px;
+   	margin: 0 auto;
 	
 	
 	
@@ -23,6 +26,7 @@ header
 {
 	float: left;
 	margin-top: 6vh;
+	margin-left: 2vw;
 	color: white;
 	font-size: 6vmin;
 	text-shadow: 2px 2px 2px #02010a;
@@ -31,6 +35,7 @@ header
 #menu_principal
 {
 	float: right;
+	margin-right: 2vw;
 	word-spacing: 2vw;
 	font-size: 4vmin;
 	margin-top: 7vh;
@@ -42,4 +47,9 @@ a
 	color: white; 
 	text-decoration: none;
 	
+}
+#paraiso
+{
+	text-align: center;
+	background-color: #82c3a6;
 }
