--- a/css3/estilos.css
+++ b/css3/estilos.css
@@ -11,6 +11,7 @@ body
 	font-family: "dancing script";
 	width: 100%;
 	
+	
 }
 header
 {
@@ -41,6 +42,7 @@ header
 	margin-top: 7vh;
 	
 }
+
 	#menu_principal a
 	{
 
@@ -51,14 +53,18 @@ header
 #contenedor
 {
 	width: 100%;
+	height: 100%;
 	margin: 0 auto;
+	
 }
+	
 	article 
 	{
 		box-sizing: border-box;
 		float:left;
 		height: 100%;
 		text-align: center;
+		
 		
 
 	}
@@ -121,3 +127,76 @@ header
 	{
 		width: 50%;		
 	}
+	footer
+	{
+		width: 100%;
+		height: 40vh;
+		background-color: #C6d5c5;
+		border-radius:  0px 0px 10px 10px;
+		float: left;
+	}
+		.pie
+		{
+			display: flex;			
+			text-align: center;
+			margin-top: 10px;	
+			
+			height: 90%;
+							
+		}
+.columna
+{
+	flex:1;
+}
+
+
+ul
+{
+	list-style: none;
+	height: 25vh;
+	text-align: left;
+	font-size: 4vmin;
+	display: flex;
+	flex-direction: column;
+	
+
+	
+	
+	
+	
+}
+		footer #enlace_pie, figcaption, #Copyright
+		{
+			text-decoration: none;
+			font-size: 5vmin;
+
+		}
+		h2
+		{
+			font-size: 8vmin;
+		}
+p
+{
+	font-size: 5vmin;
+}
+[src$="svg"]
+{
+	height: 4vw;
+}
+#contenedor_redes
+{
+	height: 25vh;
+	display: flex;
+	align-items: center;
+	justify-content:space-around
+}
+#Copyright
+{
+	height: 25vh;
+	display: flex;
+	flex-direction: column;
+	justify-content:space-around;
+	
+}
+
+	
