--- a/css3/estilos.css
+++ b/css3/estilos.css
@@ -10,8 +10,13 @@ body
 {
 	font-family: "dancing script";
 	width: 100%;
+	background-color: black;
 	
 	
+}
+img
+{
+	box-shadow: 2px 2px 10px 3px #02010a;
 }
 header
 {
@@ -139,36 +144,30 @@ header
 		{
 			display: flex;			
 			text-align: center;
-			margin-top: 10px;	
-			
+			margin-top: 10px;			
 			height: 90%;
 							
 		}
-.columna
-{
-	flex:1;
-}
+			.columna
+			{
+				flex:1;
+			}
 
 
-ul
-{
-	list-style: none;
-	height: 25vh;
-	text-align: left;
-	font-size: 4vmin;
-	display: flex;
-	flex-direction: column;
-	
+		ul
+		{
+			list-style: none;
+			height: 25vh;
+			text-align: left;
+			font-size: 4vmin;
+			display: flex;
+			flex-direction: column;
 
-	
-	
-	
-	
-}
-		footer #enlace_pie, figcaption, #Copyright
+		}
+		footer #enlace_pie, .redes figcaption,  #Copyright
 		{
 			text-decoration: none;
-			font-size: 5vmin;
+			font-size: 4vmin;
 
 		}
 		h2
