--- a/css3/estilos.css
+++ b/css3/estilos.css
@@ -5,6 +5,21 @@
 {
 	margin:0;
 }
+@-webkit-keyframes slidein
+{
+	0%
+	{
+		margin-top: 150%;
+	}
+	60%
+	{
+		margin-top: -5%;
+	}
+	100%
+	{
+		margin-top: 0;
+	}
+}
 
 body
 {
@@ -30,7 +45,7 @@ header
 	justify-content: space-between;
 	align-items:  center;
 	flex-wrap: wrap;
-	
+	animation: slidein 1s;
 }
 
 .titulo
@@ -290,10 +305,10 @@ h2
 	}
 	#menu_principal
 	{
-		width: 100%;
-		margin: auto;
-		text-align: center;
-		font-size: 200%
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    font-size: 130%
 		
 		
 	}
